<resources>
    <string name="app_name">Ngao</string>
    <string name="img">img</string>
    <string name="splash_txt_one">Ngao Credit Limited is a non-deposit taking Microfinance institution founded with the main goal of providing financial services</string>
    <string name="get_started">Get Started</string>
    <string name="who_we_are">WHO WE ARE</string>
    <string name="enter_your_id_number">Please enter your phone number to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="identity_number">Phone Number</string>
    <string name="proceed">Proceed</string>
    <string name="register">Register?</string>
    <string name="first_name">First Name</string>
    <string name="register_here">Register Here!</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">Id Number</string>
    <string name="create">Create</string>
    <string name="phone_no">* Phone No</string>
    <string name="_0_00">0.00</string>
    <string name="loan_balance_kes">Loan Balance: KES</string>
    <string name="loan_limit_kes">Loan Limit: KES</string>
    <string name="request_loan">Request Loan</string>
    <string name="pay_loan">Pay Loan</string>
    <string name="advanced_loan">Advanced Loan</string>
    <string name="finance_services">Finance Services</string>
    <string name="my_account">My Account</string>
    <string name="other_activities">Other Activities</string>
    <string name="asset_finance">Asset Finance</string>
    <string name="import_finance">Import Finance</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="installment_loan">Installment Loan</string>
    <string name="refer_a_friend">Refer-a-friend</string>
    <string name="ok">OK</string>
    <string name="getstarted_dialog_txt">Dear customer, to enhance your experience, kindly allow phone permissions</string>
    <string name="greetings">Greetings,</string>
    <string name="username">Username</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy_statement">Privacy Policy Statement</string>
    <string name="register_dialog_txt"><![CDATA[Dear customer, to proceed you must agree to privacy policy and our terms & conditions]]></string>
    <string name="invite">Invite</string>
    <string name="invite_a_friend_onboard">Invite a friend onboard</string>
    <string name="name">* Name</string>
    <string name="conn_error">Connection Error! Make sure you are connected to the internet.</string>
    <string name="successtxt">Successful!</string>
    <string name="enter_four_digit_pin_to_login_to_ngao_mobile">Enter Four Digit PIN to Login to NGAO Mobile</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="forgot_pin">FORGOT PIN?</string>
    <string name="please_wait_for_the_verification_code_sent_to_your_phone_number">Please wait for the verification code sent to your phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_number">Successfully registered. Kindly verify mobile number</string>
    <string name="o">1</string>
    <string name="wrong_pin">You entered a wrong pin. Retry?</string>
    <string name="enter_fields">Sorry! Enter all fields</string>
    <string name="get_loan_limit">Get Loan Limit</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="confirm">Confirm</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_reason">Loan Reason</string>
    <string name="loan_limit">Loan Limit</string>
</resources>