<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ngao_web_logo"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/font_bold"
        android:text="@string/enter_four_digit_pin_to_login_to_ngao_mobile"
        android:textColor="@color/web_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/font_bold"
            android:textColor="@color/web_orange"
            android:inputType="numberPassword"
            android:textSize="18sp"
            android:maxLength="4"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/c"
                android:textColor="#DC143C"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/loginbtn_style"
                android:fontFamily="@font/font_regular"
                android:text="@string/ok"
                android:textColor="#439A3E"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#CF0F1A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/font_bold"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemarks" />

</androidx.constraintlayout.widget.ConstraintLayout>