<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/top_dash"
        android:scaleType="fitXY">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ngao_web_logo"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@+id/ac"
            android:layout_toEndOf="@id/logo"
            android:fontFamily="@font/font_bold"
            android:hint="@string/greetings"
            android:textColor="@color/web_green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/greetings"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@+id/ac"
            android:layout_toEndOf="@id/logo"
            android:fontFamily="@font/font_bold"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ac"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/baseline_account_circle_36dp"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/lnL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/loan_limit_kes"
            android:textColor="@color/web_green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loanLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/lnL"
            android:fontFamily="@font/font_bold"
            android:hint="@string/_0_00"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lnB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnL"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/loan_balance_kes"
            android:textColor="@color/web_green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loanBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loanLimit"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/lnB"
            android:fontFamily="@font/font_bold"
            android:hint="@string/_0_00"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#DDDBDB"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="40dp"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/requestLoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/request_loan"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/request_loan" />

                <TextView
                    android:id="@+id/payLoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/pay_loan"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/pay_loan" />

                <TextView
                    android:id="@+id/advancedLoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:text="@string/advanced_loan"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:drawableTopCompat="@drawable/advanced_loan" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finance_services"
        android:textColor="@color/black"
        android:fontFamily="@font/font_bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/assetsFinance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:text="@string/asset_finance"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/assets64" />

        <TextView
            android:id="@+id/importFinance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:text="@string/import_finance"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/shipment64" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:textColor="@color/black"
        android:fontFamily="@font/font_bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#DDDBDB"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/miniStatement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/font_regular"
                android:layout_gravity="center"
                android:text="@string/mini_statement"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:drawableTopCompat="@drawable/ministmt" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="#DDDBDB"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/loanInstallment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/font_regular"
                android:layout_gravity="center"
                android:text="@string/installment_loan"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:drawableTopCompat="@drawable/installement" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_activities"
        android:textColor="@color/black"
        android:fontFamily="@font/font_bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#DDDBDB"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/referral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refer_a_friend"
            android:textColor="@color/black"
            android:fontFamily="@font/font_regular"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:gravity="center"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/referral" />

    </androidx.cardview.widget.CardView>

</LinearLayout>